# course-1141-9

./: .coveragerc  .env.example  .env.test.example  .gitignore  .markdownlint.json  LICENSE  README.md  README_zh-TW.md  colab.ipynb  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: tests.yml
src/nano_banana/: main.py
src/nano_banana/api/: client.py
src/nano_banana/api/demo/: demo.py
src/nano_banana/core/: config.py
src/nano_banana/discord/: bot.py  utils.py
tests/: README.md  __init__.py  conftest.py
tests/discord/: test_bot.py
tests/nano_banana/: conftest.py
tests/nano_banana/api/: test_client.py  test_demo.py
tests/nano_banana/core/: test_config.py
tests/nano_banana/discord/: test_bot.py  test_utils.py
