[project]
name = "gdg-course-1141-9"
version = "1.0"
description = "GDG Image Generation Tutorial Project"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.60.0",
    "pillow>=12.1.0",
    "py-cord>=2.7.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.14",
]

[tool.ruff]
exclude = ["__init__.py", ".env", ".venv"]
fix = true
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "Q000", "ARG", "D", "FBT001", "FBT002", "N818", "S101"]
allowed-confusables = ["（", "）", "，", "！"]
pylint.max-args = 6
mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S107", "PLR2004", "SLF001", "ANN001", "ANN201", "SIM117"]
"run_tests.py" = ["S105", "S106", "S107", "PLR2004", "SLF001", "ANN001", "ANN201", "SIM117"]

[tool.ruff.format]
quote-style = "single"
