[project]
name = "gdg-course-1141-9"
version = "1.0"
description = "GDG Image Generation Tutorial Project"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.60.0",
    "pillow>=12.1.0",
    "py-cord>=2.7.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
]

[project.scripts]
nano_banana = "nano_banana.main:main"
nano_banana_cli = "nano_banana.api.demo.demo:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]

[tool.uv]
package = true

[tool.ruff]
exclude = ["__init__.py", ".env", ".venv", "*.ipynb"]
fix = true
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # conflict with formatter
    "E501", "Q000", "Q003", "COM812", "ISC001",

    # optimize
    "D", "ARG", "FBT001", "FBT002", "N818", "S101"
]
allowed-confusables = ["（", "）", "，", "！"]
pylint.max-args = 6
mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S105", "S106", "S107", "PLR2004", "SLF001", "ANN001", "SIM117"]
"run_tests.py" = ["PLR2004"]

[tool.ruff.format]
quote-style = "single"
